redimension y familia de LPEDPRV_1

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11865,134 +11865,134 @@ FONT 8, "MS Sans Serif"
   CONTROL "TBitmap", 220, "TBitmap", 0x00000000, 544, 15, 59, 47
 }
 
-LALBPRV_1 DIALOG DISCARDABLE 135, 103, 399, 238
+LALBPRV_1 DIALOG DISCARDABLE 135, 103, 536, 273
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 65, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 132, 2, 264, 12
-  CONTROL "", 121, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 264, 47
-  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 14, 65, 11
-  CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 26, 65, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 38, 65, 11
-  CONTROL "", 222, "Edit", WS_BORDER, 132, 38, 264, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 51, 65, 11
-  CONTROL "", 232, "Edit", WS_BORDER, 132, 51, 264, 11
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 16, 393, 80
-  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 99, 38, 11
-  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 112, 65, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 125, 65, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 138, 65, 11
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 151, 65, 11
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 164, 65, 11
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 177, 65, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 190, 65, 11
-  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 203, 65, 11
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 185, 99, 64, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 185, 112, 44, 11
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 185, 125, 44, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 185, 138, 65, 11
-  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 185, 151, 44, 11
-  CONTROL "", 153, "Edit", WS_BORDER, 230, 151, 164, 11
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 185, 164, 209, 11
-  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 185, 177, 66, 11
-  CONTROL "", 331, "Edit", WS_BORDER, 252, 177, 142, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 185, 190, 66, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 252, 190, 142, 11
-  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 221, 65, 12
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 308, 220, 86, 12
-  CONTROL "Descuento", -1, "Static", WS_GROUP, 132, 115, 40, 8
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 80, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 146, 2, 386, 11
+  CONTROL "", 121, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 146, 2, 386, 47
+  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 15, 80, 11
+  CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 28, 80, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 41, 80, 11
+  CONTROL "", 222, "Edit", WS_BORDER, 146, 41, 386, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 54, 80, 11
+  CONTROL "", 232, "Edit", WS_BORDER, 146, 54, 386, 11
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 15, 529, 80
+  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 99, 80, 11
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 112, 80, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 125, 80, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 138, 80, 11
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 151, 80, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 164, 80, 11
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 177, 80, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 190, 80, 11
+  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 203, 80, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 99, 80, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 112, 80, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 125, 80, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 138, 80, 11
+  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 218, 151, 80, 11
+  CONTROL "", 153, "Edit", WS_BORDER, 300, 151, 232, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 218, 164, 314, 11
+  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 218, 177, 80, 11
+  CONTROL "", 331, "Edit", WS_BORDER, 300, 177, 232, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 218, 190, 80, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 300, 190, 232, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 256, 80, 12
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 218, 203, 80, 12
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 165, 115, 40, 8
   CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 128, 23, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 224, 34, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 260, 34, 8
   CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 141, 57, 8
   CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 193, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
   CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 102, 49, 8
-  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
-  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 132, 193, 43, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 216, 397, 1
+  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 57, 43, 8
+  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 44, 43, 8
+  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 165, 193, 43, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 253, 530, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
-  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 128, 34, 8
-  CONTROL "Rappels", -1, "Static", WS_GROUP, 132, 141, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 252, 223, 49, 8
+  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 165, 128, 34, 8
+  CONTROL "Rappels", -1, "Static", WS_GROUP, 165, 141, 31, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 165, 206, 49, 8
   CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 154, 57, 8
   CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 167, 57, 8
   CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 180, 57, 8
-  CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 132, 154, 47, 8
+  CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 31, 41, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 165, 154, 47, 8
   CONTROL "Punto verde", 172, "Static", WS_GROUP, 3, 206, 47, 8
-  CONTROL "Alm. Origen", 332, "Static", WS_GROUP, 132, 180, 40, 8
-  CONTROL "Bultos", 451, "Static", WS_GROUP, 3, 114, 59, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 132, 167, 31, 8
-  CONTROL "Imp. especial", 126, "Static", WS_GROUP, 132, 102, 47, 8
+  CONTROL "Alm. Origen", 332, "Static", WS_GROUP, 165, 180, 40, 8
+  CONTROL "Bultos", 451, "Static", WS_GROUP, 3, 115, 59, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 165, 167, 31, 8
+  CONTROL "Imp. especial", 126, "Static", WS_GROUP, 165, 102, 47, 8
 }
 
-LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 236
+LALBPRV_2 DIALOG DISCARDABLE 26, 35, 536, 270
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Impuesto incluido", 90, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 12, 77, 10
-  CONTROL "", 80, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 90, 10, 28, 11
-  CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER|WS_GROUP, 90, 35, 91, 12
-  CONTROL "", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 75, 61, 10, 12
-  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 61, 38, 12
-  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 61, 49, 33
-  CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 61, 70, 12
-  CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 61, 70, 12
-  CONTROL "", 550, "Button", BS_AUTOCHECKBOX, 75, 75, 10, 12
-  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 75, 38, 12
-  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 75, 49, 33
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 75, 70, 12
-  CONTROL "", 590, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 75, 70, 12
-  CONTROL "", 600, "Button", BS_AUTOCHECKBOX, 75, 89, 10, 12
-  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 89, 38, 12
-  CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 89, 49, 33
-  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 89, 70, 12
-  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 89, 70, 12
-  CONTROL "", 650, "Button", BS_AUTOCHECKBOX, 75, 103, 10, 12
-  CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 90, 103, 38, 12
-  CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 103, 49, 33
-  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 103, 70, 12
-  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 103, 70, 12
-  CONTROL "", 700, "Button", BS_AUTOCHECKBOX, 75, 117, 10, 12
-  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 117, 38, 12
-  CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 117, 49, 33
-  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 117, 70, 12
-  CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 117, 70, 12
-  CONTROL "", 750, "Button", BS_AUTOCHECKBOX, 75, 131, 10, 12
-  CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 131, 38, 12
-  CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 131, 49, 33
-  CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 131, 70, 12
-  CONTROL "", 790, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 131, 70, 12
-  CONTROL "Guardar nuevos precios de compra", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 150, 130, 10
-  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 8, 177, 68, 10
-  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 189, 49, 10
-  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 201, 71, 10
-  CONTROL "", 370, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 214, 63, 12
-  CONTROL "", 371, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 140, 214, 40, 12
-  CONTROL "", 361, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_GROUP, 270, 214, 81, 12
-  CONTROL "Impuestos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 1, 352, 24
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 27, 352, 136
-  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 7, 38, 65, 8
-  CONTROL "Precio 1", -1, "Static", WS_GROUP, 8, 63, 30, 10
-  CONTROL "Precio 2", -1, "Static", WS_GROUP, 8, 77, 30, 10
-  CONTROL "Precio 3", -1, "Static", WS_GROUP, 8, 91, 30, 10
-  CONTROL "Precio 4", -1, "Static", WS_GROUP, 8, 105, 30, 10
-  CONTROL "Precio 5", -1, "Static", WS_GROUP, 8, 119, 30, 10
-  CONTROL "Precio 6", -1, "Static", WS_GROUP, 8, 133, 30, 10
-  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 46, 51, 139, 96
-  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 189, 51, 82, 96
-  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 273, 51, 82, 96
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 63, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 77, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 91, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 105, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 119, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 133, 23, 10
-  CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 166, 352, 64
-  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 8, 216, 60, 10
-  CONTROL "Línea facturada", 360, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 195, 216, 64, 10
+  CONTROL "Impuesto incluido", 90, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 10, 16, 77, 10
+  CONTROL "", 80, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 90, 13, 28, 13
+  CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER|WS_GROUP, 91, 38, 91, 13
+  CONTROL "", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 66, 10, 12
+  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 91, 65, 38, 13
+  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 65, 49, 33
+  CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 196, 65, 70, 13
+  CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 282, 65, 70, 13
+  CONTROL "", 550, "Button", BS_AUTOCHECKBOX, 76, 81, 10, 12
+  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 91, 80, 38, 13
+  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 80, 49, 33
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 196, 80, 70, 13
+  CONTROL "", 590, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 282, 80, 70, 13
+  CONTROL "", 600, "Button", BS_AUTOCHECKBOX, 76, 96, 10, 12
+  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 91, 95, 38, 13
+  CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 95, 49, 33
+  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 196, 95, 70, 13
+  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 282, 95, 70, 13
+  CONTROL "", 650, "Button", BS_AUTOCHECKBOX, 76, 111, 10, 12
+  CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 110, 38, 13
+  CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 110, 49, 33
+  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 196, 110, 70, 13
+  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 282, 110, 70, 13
+  CONTROL "", 700, "Button", BS_AUTOCHECKBOX, 76, 126, 10, 12
+  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 91, 125, 38, 13
+  CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 125, 49, 33
+  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 196, 125, 70, 13
+  CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 282, 125, 70, 13
+  CONTROL "", 750, "Button", BS_AUTOCHECKBOX, 76, 141, 10, 12
+  CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 91, 140, 38, 13
+  CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 140, 49, 33
+  CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 196, 140, 70, 13
+  CONTROL "", 790, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 282, 140, 70, 13
+  CONTROL "Guardar nuevos precios de compra", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 163, 130, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 8, 192, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 204, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 216, 71, 10
+  CONTROL "", 370, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 229, 80, 13
+  CONTROL "", 371, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 157, 229, 40, 13
+  CONTROL "", 361, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_GROUP, 75, 244, 80, 13
+  CONTROL "Impuestos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 1, 530, 31
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 31, 530, 147
+  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 8, 43, 65, 8
+  CONTROL "Precio 1", -1, "Static", WS_GROUP, 9, 68, 30, 10
+  CONTROL "Precio 2", -1, "Static", WS_GROUP, 9, 83, 30, 10
+  CONTROL "Precio 3", -1, "Static", WS_GROUP, 9, 98, 30, 10
+  CONTROL "Precio 4", -1, "Static", WS_GROUP, 9, 113, 30, 10
+  CONTROL "Precio 5", -1, "Static", WS_GROUP, 9, 128, 30, 10
+  CONTROL "Precio 6", -1, "Static", WS_GROUP, 9, 143, 30, 10
+  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 47, 55, 139, 105
+  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 190, 55, 82, 105
+  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 276, 55, 82, 105
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 68, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 83, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 98, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 113, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 128, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 143, 23, 10
+  CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 181, 530, 86
+  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 8, 232, 60, 10
+  CONTROL "Línea facturada", 360, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 8, 247, 64, 10
 }
 
 LALBPRV_3 DIALOG DISCARDABLE 26, 35, 360, 261
@@ -19737,8 +19737,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 218, 161, 314, 11
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 218, 174, 80, 11
   CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 300, 174, 232, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 187, 80, 11
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 218, 200, 80, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 200, 80, 11
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 218, 213, 80, 11
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 258, 80, 11
   CONTROL "Descuento", -1, "Static", WS_GROUP, 165, 112, 40, 8
   CONTROL "Cajas", 141, "Static", WS_GROUP, 5, 125, 59, 8
@@ -19754,15 +19754,18 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 5, 17, 27, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 165, 125, 34, 8
   CONTROL "Rappels", -1, "Static", WS_GROUP, 165, 138, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 165, 203, 49, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 165, 216, 49, 8
   CONTROL "", 301, "Static", WS_GROUP, 5, 148, 57, 8
   CONTROL "", 311, "Static", WS_GROUP, 5, 160, 57, 8
   CONTROL "", 321, "Static", WS_GROUP, 5, 172, 57, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 165, 151, 51, 8
-  CONTROL "Stock", -1, "Static", WS_GROUP, 165, 190, 24, 8
+  CONTROL "Stock", -1, "Static", WS_GROUP, 165, 203, 24, 8
   CONTROL "Bultos", 421, "Static", WS_GROUP, 5, 112, 59, 8
   CONTROL "Formato", -1, "Static", WS_GROUP, 165, 164, 31, 8
   CONTROL "Imp. especial", 126, "Static", WS_GROUP, 165, 99, 47, 8
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 218, 187, 80, 11
+  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 300, 187, 232, 11
+  CONTROL "Familia", -1, "Static", WS_GROUP, 165, 190, 33, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
