familia en facturas y albaranes

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11899,8 +11899,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 331, "Edit", WS_BORDER, 300, 177, 232, 11
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 218, 190, 80, 11
   CONTROL "", 241, "Edit", WS_BORDER, 300, 190, 232, 11
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 218, 203, 80, 11
+  CONTROL "", 271, "Edit", WS_BORDER, 300, 203, 232, 11
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 218, 216, 80, 12
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 256, 80, 12
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 218, 203, 80, 12
   CONTROL "Descuento", -1, "Static", WS_GROUP, 165, 115, 40, 8
   CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 128, 23, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 3, 260, 34, 8
@@ -11915,7 +11917,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 165, 128, 34, 8
   CONTROL "Rappels", -1, "Static", WS_GROUP, 165, 141, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 165, 206, 49, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 165, 219, 49, 8
   CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 154, 57, 8
   CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 167, 57, 8
   CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 180, 57, 8
@@ -11926,6 +11928,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Bultos", 451, "Static", WS_GROUP, 3, 115, 59, 8
   CONTROL "Formato", -1, "Static", WS_GROUP, 165, 167, 31, 8
   CONTROL "Imp. especial", 126, "Static", WS_GROUP, 165, 102, 47, 8
+  CONTROL "Familia", -1, "Static", WS_GROUP, 165, 206, 43, 8
 }
 
 LALBPRV_2 DIALOG DISCARDABLE 26, 35, 536, 270
@@ -13029,11 +13032,11 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-LFACPRV_5 DIALOG DISCARDABLE 135, 103, 405, 209
+LFACPRV_5 DIALOG DISCARDABLE 135, 103, 536, 281
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 8, 337, 192
+  CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 54, 8, 478, 263
   CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 8, 50, 8
 }
 
@@ -13045,66 +13048,69 @@ FONT 8, "MS Sans Serif"
   CONTROL "Observaciones", -1, "Static", WS_GROUP, 5, 5, 50, 8
 }
 
-LFACPRV_7 DIALOG DISCARDABLE 135, 103, 397, 231
+LFACPRV_7 DIALOG DISCARDABLE 135, 103, 536, 251
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 65, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 133, 2, 264, 11
-  CONTROL "", 121, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 264, 47
-  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 14, 65, 11
-  CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 26, 65, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 38, 65, 11
-  CONTROL "", 222, "Edit", WS_BORDER, 132, 38, 264, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 50, 65, 11
-  CONTROL "", 232, "Edit", WS_BORDER, 132, 50, 264, 11
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 14, 393, 80
-  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 96, 38, 11
-  CONTROL "", 470, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 108, 65, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 120, 65, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 133, 65, 11
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 146, 65, 11
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 159, 65, 11
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 172, 65, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 185, 65, 11
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 184, 96, 64, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 184, 108, 44, 11
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 184, 120, 44, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 184, 133, 65, 11
-  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 184, 146, 46, 11
-  CONTROL "", 153, "Edit", WS_BORDER, 232, 146, 163, 11
-  CONTROL "", 480, "Edit", WS_BORDER|WS_TABSTOP, 184, 159, 211, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 184, 185, 46, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 232, 185, 163, 11
-  CONTROL "Gastos suplidos", 460, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 329, 98, 63, 10
-  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 215, 65, 11
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 309, 214, 86, 11
-  CONTROL "Descuento", -1, "Static", WS_GROUP, 132, 111, 40, 8
-  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 123, 59, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 218, 34, 8
-  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 136, 57, 8
-  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 188, 57, 8
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 80, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 146, 2, 386, 11
+  CONTROL "", 121, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 146, 2, 386, 47
+  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 15, 80, 11
+  CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 28, 80, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 41, 80, 11
+  CONTROL "", 222, "Edit", WS_BORDER, 146, 41, 386, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 54, 80, 11
+  CONTROL "", 232, "Edit", WS_BORDER, 146, 54, 386, 11
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 15, 529, 80
+  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 96, 80, 11
+  CONTROL "", 470, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 109, 80, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 122, 80, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 135, 80, 11
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 148, 80, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 161, 80, 11
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 174, 80, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 187, 80, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 220, 96, 80, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 220, 109, 80, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 220, 122, 80, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 220, 135, 80, 11
+  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 220, 148, 80, 11
+  CONTROL "", 153, "Edit", WS_BORDER, 302, 148, 230, 11
+  CONTROL "", 480, "Edit", WS_BORDER|WS_TABSTOP, 220, 161, 312, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 220, 187, 80, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 302, 187, 230, 11
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 220, 200, 80, 11
+  CONTROL "", 271, "Edit", WS_BORDER, 302, 200, 230, 11
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 220, 213, 80, 11
+  CONTROL "Gastos suplidos", 460, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 329, 97, 63, 10
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 236, 80, 11
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 164, 112, 40, 8
+  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 125, 59, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 239, 34, 8
+  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 138, 57, 8
+  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 190, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
   CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 99, 49, 8
-  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
-  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 132, 188, 41, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 211, 397, 1
+  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 57, 43, 8
+  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 44, 43, 8
+  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 164, 190, 41, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 232, 527, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
-  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 124, 34, 8
-  CONTROL "Rappels", -1, "Static", WS_GROUP, 132, 137, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 253, 217, 49, 8
-  CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 149, 57, 8
-  CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 162, 57, 8
-  CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 175, 57, 8
-  CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 132, 150, 47, 8
-  CONTROL "Bultos", 471, "Static", WS_GROUP, 3, 111, 59, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 132, 162, 41, 8
-  CONTROL "Imp. especial", 126, "Static", WS_GROUP, 132, 99, 47, 8
-  CONTROL "Alm. Origen", 332, "Static", WS_GROUP, 132, 175, 41, 8
-  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 184, 172, 46, 11
-  CONTROL "", 331, "Edit", WS_BORDER, 232, 172, 163, 11
+  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 164, 125, 34, 8
+  CONTROL "Rappels", -1, "Static", WS_GROUP, 164, 138, 31, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 164, 213, 49, 8
+  CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 151, 57, 8
+  CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 164, 57, 8
+  CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 177, 57, 8
+  CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 31, 41, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 164, 151, 47, 8
+  CONTROL "Bultos", 471, "Static", WS_GROUP, 3, 112, 25, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 164, 164, 41, 8
+  CONTROL "Imp. especial", 126, "Static", WS_GROUP, 164, 99, 47, 8
+  CONTROL "Alm. Origen", 332, "Static", WS_GROUP, 164, 177, 41, 8
+  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 220, 174, 80, 11
+  CONTROL "", 331, "Edit", WS_BORDER, 302, 174, 230, 11
+  CONTROL "Familia", -1, "Static", WS_GROUP, 164, 203, 41, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -19737,6 +19743,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 218, 161, 314, 11
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 218, 174, 80, 11
   CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 300, 174, 232, 11
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 218, 187, 80, 11
+  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 300, 187, 232, 11
   CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 200, 80, 11
   CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 218, 213, 80, 11
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 258, 80, 11
@@ -19763,8 +19771,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Bultos", 421, "Static", WS_GROUP, 5, 112, 59, 8
   CONTROL "Formato", -1, "Static", WS_GROUP, 165, 164, 31, 8
   CONTROL "Imp. especial", 126, "Static", WS_GROUP, 165, 99, 47, 8
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 218, 187, 80, 11
-  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 300, 187, 232, 11
   CONTROL "Familia", -1, "Static", WS_GROUP, 165, 190, 33, 8
 }
 
@@ -20273,18 +20279,18 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-LALBPRV_4 DIALOG DISCARDABLE 135, 103, 405, 209
+LALBPRV_4 DIALOG DISCARDABLE 135, 103, 536, 275
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 61, 8, 331, 168
-  CONTROL "", 370, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 61, 179, 70, 12
-  CONTROL "", 371, "Edit", WS_BORDER|WS_TABSTOP, 134, 179, 60, 12
-  CONTROL "", 380, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 61, 193, 70, 12
-  CONTROL "", 381, "Edit", WS_BORDER|WS_TABSTOP, 134, 193, 60, 12
+  CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 60, 8, 472, 235
+  CONTROL "", 370, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 60, 245, 70, 12
+  CONTROL "", 371, "Edit", WS_BORDER|WS_TABSTOP, 132, 245, 60, 12
+  CONTROL "", 380, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 60, 259, 70, 12
+  CONTROL "", 381, "Edit", WS_BORDER|WS_TABSTOP, 132, 259, 60, 12
   CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 8, 50, 8
-  CONTROL "Fecha apertura", -1, "Static", WS_GROUP, 4, 182, 51, 8
-  CONTROL "Fecha cierre", -1, "Static", WS_GROUP, 4, 196, 45, 8
+  CONTROL "Fecha apertura", -1, "Static", WS_GROUP, 4, 249, 51, 8
+  CONTROL "Fecha cierre", -1, "Static", WS_GROUP, 4, 263, 45, 8
 }
 
 EXTRA DIALOG DISCARDABLE 138, 96, 469, 299
