--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21169,3 +21169,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descripción", -1, "Static", WS_GROUP, 50, 61, 63, 8
 }
 
+HELP_BROWSE_SQL DIALOG DISCARDABLE 141, -5, 560, 330
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|DS_CENTER|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Ayuda a la entrada"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 9, 14, 409, 12
+  CONTROL "", 105, "SQLXBrowse", WS_TABSTOP|0x00300000, 3, 35, 552, 274
+  CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 438, 14, 110, 138
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 313, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 57, 313, 50, 14
+  CONTROL "Ordenado por", -1, "Button", BS_GROUPBOX, 433, 2, 122, 31
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 450, 313, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 505, 313, 50, 14
+  CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 420, 31
+}
+
