--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21007,7 +21007,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Generar documento como pedido", 441, "Button", BS_RADIOBUTTON, 6, 376, 119, 10
 }
 
-CONTABILIZA_RECIBOS_CLIENTES DIALOG DISCARDABLE 22, 50, 216, 308
+CONTABILIZA_RECIBOS_CLIENTES DIALOG DISCARDABLE 22, 50, 216, 348
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Contabilizar recibos"
 FONT 8, "MS Sans Serif"
@@ -21023,17 +21023,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 70, 55, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 165, 70, 18, 11
   CONTROL "", 170, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 193, 70, 18, 11
+  CONTROL "Fecha cobro", 93, "Button", BS_AUTORADIOBUTTON, 6, 87, 53, 10
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 98, 60, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 111, 60, 11
   CONTROL "Recibo inicial", -1, "Static", WS_GROUP, 19, 60, 47, 8
   CONTROL "Recibo final", 4001, "Static", WS_GROUP, 19, 73, 43, 8
   CONTROL "-", 4002, "Static", WS_GROUP, 186, 58, 7, 8
   CONTROL "-", 4003, "Static", WS_GROUP, 186, 71, 7, 8
-  CONTROL "Simular resultados", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 89, 70, 10
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 108, 106, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 162, 106, 50, 14
+  CONTROL "Simular resultados", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 129, 70, 10
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 108, 145, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 162, 145, 50, 14
   CONTROL "Tipo", 4004, "Static", WS_GROUP, 6, 6, 46, 8
   CONTROL "Seleccionados", 90, "Button", BS_AUTORADIOBUTTON, 6, 20, 60, 10
-  CONTROL "", 200, "msctls_progress32", 0x00000000, 6, 124, 206, 4
-  CONTROL "", 180, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 6, 131, 206, 174
+  CONTROL "", 200, "msctls_progress32", 0x00000000, 6, 163, 206, 4
+  CONTROL "", 180, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 6, 170, 206, 174
+  CONTROL "Inicial", -1, "Static", WS_GROUP, 19, 101, 47, 8
+  CONTROL "Final", -1, "Static", WS_GROUP, 19, 114, 43, 8
 }
 
 RECIBOSCOMPENSAR DIALOG DISCARDABLE 278, 96, 493, 356
