--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21024,8 +21024,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 165, 70, 18, 11
   CONTROL "", 170, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 193, 70, 18, 11
   CONTROL "Fecha cobro", 93, "Button", BS_AUTORADIOBUTTON, 6, 87, 53, 10
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 98, 60, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 111, 60, 11
+  CONTROL "", 310, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 98, 60, 11
+  CONTROL "", 320, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 111, 60, 11
   CONTROL "Recibo inicial", -1, "Static", WS_GROUP, 19, 60, 47, 8
   CONTROL "Recibo final", 4001, "Static", WS_GROUP, 19, 73, 43, 8
   CONTROL "-", 4002, "Static", WS_GROUP, 186, 58, 7, 8
