--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8540,31 +8540,32 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 6, 6, 369, 187
 }
 
-IMPREMCLI DIALOG DISCARDABLE 43, -347, 404, 279
+IMPREMCLI DIALOG DISCARDABLE 43, -347, 404, 297
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Importar de recibos a clientes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 14, 70, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 27, 70, 12
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 55, 70, 12
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 68, 70, 12
-  CONTROL "", 190, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 93, 34, 12
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 85, 93, 70, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 157, 93, 22, 12
-  CONTROL "", 200, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 106, 34, 12
-  CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 85, 106, 70, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 157, 106, 22, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 49, 134, 70, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 121, 134, 138, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 49, 146, 70, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 121, 146, 138, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 175, 70, 12
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 121, 175, 138, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 49, 187, 70, 12
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 121, 187, 138, 12
-  CONTROL "No incluir recibos negativos o con importe cero", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 221, 162, 10
-  CONTROL "No incluir recibos sin cuenta bancaria", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 232, 131, 10
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 15, 70, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 27, 70, 11
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 56, 70, 11
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 68, 70, 11
+  CONTROL "", 190, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 94, 34, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 85, 94, 70, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 157, 94, 22, 11
+  CONTROL "", 200, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 107, 34, 11
+  CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 85, 107, 70, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 157, 107, 22, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 49, 135, 70, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 121, 135, 138, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 49, 147, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 121, 147, 138, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 176, 70, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 121, 176, 138, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 49, 188, 70, 11
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 121, 188, 138, 11
+  CONTROL "No incluir recibos negativos o con importe cero", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 222, 162, 10
+  CONTROL "No incluir recibos sin cuenta bancaria", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 234, 131, 10
+  CONTROL "No incluir recibos a la espera de documentación", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 247, 165, 10
   CONTROL "Todas", 1170, "TWebBtn", 0x00000000, 278, 17, 50, 11
   CONTROL "Ninguna", 1180, "TWebBtn", 0x00000000, 338, 17, 50, 11
   CONTROL "Serie A", 1190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 30, 40, 12
@@ -8593,26 +8594,26 @@ FONT 8, "MS Sans Serif"
   CONTROL "Serie X", 1420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 150, 38, 12
   CONTROL "Serie Y", 1430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 162, 39, 12
   CONTROL "Serie Z", 1440, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 174, 40, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 295, 260, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 350, 260, 50, 14
-  CONTROL "Fecha expedición", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 3, 264, 38
-  CONTROL "Desde", -1, "Static", WS_GROUP, 7, 17, 39, 8
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 295, 278, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 350, 278, 50, 14
+  CONTROL "Fecha expedición", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 4, 264, 38
+  CONTROL "Desde", -1, "Static", WS_GROUP, 7, 18, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 7, 30, 37, 8
-  CONTROL "", 140, "msctls_progress32", WS_BORDER, 3, 250, 395, 5
-  CONTROL "Fecha vencimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 44, 264, 38
-  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 58, 39, 8
+  CONTROL "", 140, "msctls_progress32", WS_BORDER, 2, 268, 398, 5
+  CONTROL "Fecha vencimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 45, 264, 38
+  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 59, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 71, 37, 8
-  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 138, 30, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 150, 30, 8
-  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 178, 30, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 190, 30, 8
-  CONTROL "Clientes", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 124, 264, 39
-  CONTROL "Forma de pago", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 164, 264, 39
-  CONTROL "Serie facturación", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 83, 264, 38
-  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 97, 39, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 110, 37, 8
-  CONTROL "Opciones", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 206, 264, 41
-  CONTROL "Series incluidas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 267, 3, 132, 243
+  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 139, 30, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 151, 30, 8
+  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 179, 30, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 191, 30, 8
+  CONTROL "Clientes", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 125, 264, 39
+  CONTROL "Forma de pago", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 165, 264, 39
+  CONTROL "Serie facturación", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 84, 264, 38
+  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 98, 39, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 111, 37, 8
+  CONTROL "Opciones", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 207, 264, 55
+  CONTROL "Series incluidas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 267, 3, 132, 257
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
