--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18347,7 +18347,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Sincronización para pre-ventas", -1, "Static", SS_LEFTNOWORDWRAP, 41, 4, 428, 8
 }
 
-SITUACION DIALOG DISCARDABLE 77, 58, 281, 43
+TIPOSNOTAS DIALOG DISCARDABLE 77, 58, 281, 43
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Situaciones"
 FONT 8, "MS Sans Serif"
