--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21189,3 +21189,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 420, 31
 }
 
+ETIQUETA DIALOG DISCARDABLE 77, 58, 329, 309
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Etiqueta"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 218, 289, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 273, 289, 50, 14
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 218, 11
+  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 69, 266, 207
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 50, 42, 30, 8
+  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 44, 29, 279, 27
+  CONTROL "Relaciones", -1, "Button", BS_GROUPBOX, 44, 58, 279, 225
+  CONTROL "", 500, "TBitmap", 0x0000020e, 4, 4, 34, 30, 0x00000020
+  CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 4, 94, 8
+}
+
