--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21205,3 +21205,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 4, 94, 8
 }
 
+SITUACION DIALOG DISCARDABLE 77, 58, 281, 43
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Tipos impresoras"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 9, 220, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 26, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 26, 50, 14
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
+}
+
