--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20368,23 +20368,18 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-LENGUAJES DIALOG DISCARDABLE 60, 16, 297, 199
+LENGUAJES DIALOG DISCARDABLE 60, 16, 297, 67
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Lenguaje"
 FONT 8, "Helv"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 14, 33, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 75, 27, 210, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 188, 180, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 180, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 188, 49, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 49, 50, 14
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 290, 40
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 17, 27, 8
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 8, 31, 45, 8
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 7, 57, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 61, 57, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 116, 57, 50, 14
-  CONTROL "", 600, "TXBrowse", WS_TABSTOP|0x00300000, 8, 74, 277, 95
-  CONTROL "Relaciones con prestashop", -1, "Button", BS_GROUPBOX, 2, 45, 290, 131
 }
 
 ARTICULO_LENGUAJE DIALOG DISCARDABLE 140, 65, 382, 163
@@ -21226,11 +21221,11 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Entidades"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 58, 19, 98, 11
+  CONTROL "", 110, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 115, 19, 41, 11
   CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 58, 4, 98, 40
   CONTROL "&Aceptar", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 53, 38, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 106, 38, 50, 14
   CONTROL "Identificador", -1, "Static", WS_GROUP, 4, 20, 44, 8
-  CONTROL "Rol", -1, "Static", WS_GROUP, 4, 8, 16, 8
+  CONTROL "Web", -1, "Static", WS_GROUP, 4, 8, 16, 8
 }
 
