--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21189,20 +21189,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 420, 31
 }
 
-ETIQUETA DIALOG DISCARDABLE 77, 58, 329, 309
+ETIQUETA DIALOG DISCARDABLE 77, 58, 329, 325
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Etiqueta"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 218, 289, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 273, 289, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 218, 306, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 273, 306, 50, 14
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 218, 11
-  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 69, 266, 207
+  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 86, 266, 207
   CONTROL "Nombre", -1, "Static", WS_GROUP, 50, 42, 30, 8
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 44, 29, 279, 27
-  CONTROL "Relaciones", -1, "Button", BS_GROUPBOX, 44, 58, 279, 225
+  CONTROL "Relaciones", -1, "Button", BS_GROUPBOX, 44, 75, 279, 225
   CONTROL "", 500, "TBitmap", 0x0000020e, 4, 4, 34, 30, 0x00000020
   CONTROL "Datos generales de la etiqueta", -1, "Static", SS_LEFTNOWORDWRAP, 44, 4, 113, 8
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 98, 61, 218, 11
+  CONTROL "Buscar", -1, "Static", WS_GROUP, 50, 62, 30, 8
 }
 
 SITUACION DIALOG DISCARDABLE 77, 58, 281, 43
@@ -21238,5 +21240,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 26, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 26, 50, 14
   CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
+}
+
+HELP_ETIQUETAS DIALOG DISCARDABLE 141, -5, 369, 330
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|DS_CENTER|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Ayuda a la entrada"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 9, 14, 350, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 258, 313, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 313, 313, 50, 14
+  CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 360, 31
+  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 4, 37, 360, 270
 }
 
