--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7164,13 +7164,11 @@ FAMILIA_02 DIALOG DISCARDABLE 98, -11, 346, 318
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Incluir en informes de stocks bajo minimos", 540, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 15, 145, 10
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 8, 42, 50, 14
-  CONTROL "&Modificar [F3]", 510, "Button", WS_TABSTOP, 62, 42, 50, 14
-  CONTROL "&Eliminar [F4]", 520, "Button", WS_TABSTOP, 116, 42, 50, 14
-  CONTROL "", 530, "TXBrowse", WS_TABSTOP|0x00300000, 8, 57, 328, 254
-  CONTROL "Codificación de proveedores", -1, "Button", BS_GROUPBOX, 1, 31, 339, 284
-  CONTROL "Informes", -1, "Button", BS_GROUPBOX, 1, 3, 339, 26
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 8, 12, 50, 14
+  CONTROL "&Modificar [F3]", 510, "Button", WS_TABSTOP, 62, 12, 50, 14
+  CONTROL "&Eliminar [F4]", 520, "Button", WS_TABSTOP, 116, 12, 50, 14
+  CONTROL "", 530, "TXBrowse", WS_TABSTOP|0x00300000, 8, 28, 328, 281
+  CONTROL "Codificación de proveedores", -1, "Button", BS_GROUPBOX, 1, 2, 339, 313
 }
 
 FAMILIA_03 DIALOG DISCARDABLE 98, -11, 346, 318
@@ -19635,25 +19633,27 @@ FONT 8, "MS Sans Serif"
   CONTROL "Añadir familia a la descripción", 116, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 137, 108, 10
   CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 150, 54, 12
   CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 59, 164, 217, 12
-  CONTROL "Permitir precios sin valoración", 315, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 209, 108, 10
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 220, 54, 12
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 233, 54, 12
-  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 261, 80, 12
-  CONTROL "Rapels %", -1, "Static", WS_GROUP, 9, 236, 35, 8
+  CONTROL "Permitir precios sin valoración", 315, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 226, 108, 10
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 237, 54, 12
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 250, 54, 12
+  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 278, 80, 12
+  CONTROL "Rapels %", -1, "Static", WS_GROUP, 9, 253, 35, 8
   CONTROL "Color botón", -1, "Static", WS_GROUP, 9, 28, 41, 8
   CONTROL "Imagen", -1, "Static", WS_GROUP, 9, 41, 29, 8
-  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 2, 198, 279, 51
-  CONTROL "Descuento %", -1, "Static", WS_GROUP, 9, 224, 47, 8
+  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 2, 215, 279, 51
+  CONTROL "Descuento %", -1, "Static", WS_GROUP, 9, 241, 47, 8
   CONTROL "Propiedades táctil", -1, "Button", BS_GROUPBOX, 2, 2, 279, 107
   CONTROL "Posición", -1, "Static", WS_GROUP, 9, 54, 32, 8
   CONTROL "Orden", -1, "Static", WS_GROUP, 9, 153, 25, 8
-  CONTROL "Prestashop", -1, "Button", BS_GROUPBOX, 2, 112, 279, 83
+  CONTROL "Prestashop", -1, "Button", BS_GROUPBOX, 2, 112, 279, 101
   CONTROL "Comentario", -1, "Static", WS_GROUP, 9, 67, 48, 8
   CONTROL "Descripción", -1, "Static", WS_GROUP, 9, 167, 43, 8
   CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 178, 80, 12
+  CONTROL "", 370, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 59, 193, 80, 80
   CONTROL "Id prestashop", -1, "Static", WS_GROUP, 9, 181, 48, 8
-  CONTROL "Garantía", -1, "Button", BS_GROUPBOX, 2, 252, 279, 25
-  CONTROL "Número días ", -1, "Static", WS_GROUP, 9, 265, 47, 8
+  CONTROL "Garantía", -1, "Button", BS_GROUPBOX, 2, 269, 279, 25
+  CONTROL "Número días ", -1, "Static", WS_GROUP, 9, 282, 47, 8
+  CONTROL "Especial", -1, "Static", WS_GROUP, 9, 197, 32, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
