--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21197,14 +21197,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 218, 306, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 273, 306, 50, 14
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 218, 11
-  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 86, 266, 207
+  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 70, 266, 223
   CONTROL "Nombre", -1, "Static", WS_GROUP, 50, 42, 30, 8
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 44, 29, 279, 27
-  CONTROL "Relaciones", -1, "Button", BS_GROUPBOX, 44, 75, 279, 225
+  CONTROL "Relaciones", -1, "Button", BS_GROUPBOX, 44, 59, 279, 241
   CONTROL "", 500, "TBitmap", 0x0000020e, 4, 4, 34, 30, 0x00000020
   CONTROL "Datos generales de la etiqueta", -1, "Static", SS_LEFTNOWORDWRAP, 44, 4, 113, 8
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 98, 61, 218, 11
-  CONTROL "Buscar", -1, "Static", WS_GROUP, 50, 62, 30, 8
 }
 
 SITUACION DIALOG DISCARDABLE 77, 58, 281, 43
@@ -21251,6 +21249,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 258, 313, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 313, 313, 50, 14
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 360, 31
-  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 4, 37, 360, 270
+  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_EDITLABELS|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 4, 37, 360, 270
 }
 
