--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21197,7 +21197,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 218, 306, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 273, 306, 50, 14
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 218, 11
-  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 70, 266, 223
+  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 50, 70, 266, 223
   CONTROL "Nombre", -1, "Static", WS_GROUP, 50, 42, 30, 8
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 44, 29, 279, 27
   CONTROL "Relaciones", -1, "Button", BS_GROUPBOX, 44, 59, 279, 241
